--- a/php-backend/composer.json
+++ b/php-backend/composer.json
@@ -16,6 +16,7 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.3.*",
         "symfony/runtime": "7.3.*",
+        "symfony/security-bundle": "7.3.*",
         "symfony/yaml": "7.3.*"
     },
     "config": {
@@ -71,6 +72,7 @@
     "require-dev": {
         "phpunit/phpunit": "^11.5",
         "symfony/browser-kit": "7.3.*",
-        "symfony/css-selector": "7.3.*"
+        "symfony/css-selector": "7.3.*",
+        "symfony/maker-bundle": "^1.64"
     }
 }
